force-app/main/default/objects/OrgChartPlus__OCP_Template__c/OrgChartPlus__OCP_Template__c.object-meta.xml
<CustomObject>
    <label>OCP Template</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCP Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>