force-app/main/default/objects/OrgChartPlus__OCP_Template__c/fields/OrgChartPlus__AutoMatch__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__AutoMatch__c</fullName>
    <label>Auto Match</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>