force-app/main/default/objects/OrgChartPlus__OCP_Template__c/fields/OrgChartPlus__Default__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>