force-app/main/default/objects/OrgChartPlus__OCP_Template__c/fields/OrgChartPlus__JSON__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__JSON__c</fullName>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>