force-app/main/default/objects/OrgChartPlus__OCP_Template__c/fields/OrgChartPlus__TemplateLabel__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__TemplateLabel__c</fullName>
    <label>Template Label</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>